Bug 1782303 - Don't generate root filters when generating a glyph mask. r=mstange

As per https://searchfox.org/mozilla-central/rev/c0bed29d643393af6ebe77aa31455f283f169202/layout/generic/nsIFrame.cpp#3470

Differential Revision: https://phabricator.services.mozilla.com/D154083